# hrmis-rough

./: .env  .gitignore  Dockerfile  README.md  compose.override.yml  compose.prod.yml  compose.yml  entrypoint.sh  hrmis  pyproject.toml  run.sh
config/: generate_config.py  odoo.conf  odoo.conf.template
modules/custom/auditlog/views/: auditlog_view.xml
modules/custom/custom_approvals_odoo18/: __manifest__.py
modules/custom/custom_approvals_odoo18/controllers/: __init__.py  main.py  profile.py  services.py  welcome.py
modules/custom/custom_approvals_odoo18/models/: __init__.py  approval_action.py  approval_request.py  approval_type.py  hr_cadre.py  hr_profile.py  res_user.py
modules/custom/custom_approvals_odoo18/security/: ir.model.access.csv
modules/custom/custom_approvals_odoo18/views/: approvals_dashboard.xml  compliants.xml  custom_approvals.xml  services.xml  (+16 more)
modules/custom/custom_login/: __init__.py  __manifest__.py
modules/custom/custom_section_officers/: __init__.py  __manifest__.py
modules/custom/custom_website/: __manifest__.py
modules/custom/district_facility/: __manifest__.py
modules/custom/hr_holidays_multilevel_hierarchy/: __manifest__.py
modules/custom/hr_holidays_updates/: __init__.py  __manifest__.py  hooks.py
modules/custom/hrmis_multilevel_approvals/: __manifest__.py
modules/custom/hrmis_registry/: __init__.py  __manifest__.py
modules/custom/hrmis_transfer/: __manifest__.py
modules/custom/hrmis_user_profiles_updates/: __manifest__.py
modules/custom/leave_letter/: __manifest__.py
modules/custom/ms_dho/: __manifest__.py
(+312 files in other folders)
